--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
             <option value="playlist5">Playlist 5</option>
         </select>
         <br><br>
-        <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=code&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
+        <a href="#" onclick="loginWithSpotify()" class="spotify-login-btn">Login with Spotify</a>
     </div>
 
     <script>
-        // Function to enable the dropdown
-        function enableDropdown() {
-            var dropdown = document.getElementById("dropdown");
-            dropdown.disabled = false;
+        function loginWithSpotify() {
+            // Redirect to Spotify login with the redirect URI including the access token parameter
+            window.location.href = "https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true";
         }
     </script>
 </body>
