--- a/second_page.html
+++ b/second_page.html
@@ -34,40 +34,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Track details container */
-.track-details {
-  width: 100%;
-  max-width: 800px;
-  text-align: center;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-/* Track title */
-.track-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-/* Artist name and release year */
-.artist-release {
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-/* Spotify embed style */
-iframe {
-  width: 100%;
-  height: 300px;
-  border: none;
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
-
 /* Select dropdown style */
 #moods {
   padding: 10px;
@@ -100,13 +66,6 @@ button:hover {
   max-width: 600px;
   text-align: center;
   margin-top: 20px;
-}
-
-/* Tracks container style */
-.tracks {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
 }
 
 /* Individual track style */
@@ -156,24 +115,6 @@ button:hover {
 #logout-button:hover {
   background-color: #ff5e5e;
 }
-
-/* Back button style */
-#back-button {
-  display: block;
-  margin: 20px auto;
-  padding: 10px 20px;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s;
-}
-
-#back-button:hover {
-  background-color: #777;
-}
 </style>
 </head>
 <body>
@@ -193,8 +134,7 @@ button:hover {
 </div>
 <button id="logout-button">Logout</button>
 
-  <script>
-    
+<script>
 $(document).ready(function() {
     var player;
 
@@ -292,11 +232,11 @@ function searchRecommendedTracks(mood, accessToken) {
             "Authorization": "Bearer " + accessToken
         },
         success: function(response) {
-            var trackHtml = '<h2>Recommended Tracks:</h2><ul>';
+            var trackHtml = '<h2>Recommended Tracks:</h2><div class="tracks">';
             response.tracks.slice(0, 5).forEach(function(track) { // Slice the array to get only 5 tracks
-                trackHtml += '<li><button onclick="playTrack(\'' + track.uri + '\')">' + track.name + ' - ' + track.artists[0].name + '</button></li>';
+                trackHtml += '<div class="track"><p>' + track.name + '</p><p>' + track.artists.map(artist => artist.name).join(', ') + '</p><a href="#" onclick="playTrack(\'' + track.uri + '\')">Play</a></div>';
             });
-            trackHtml += '</ul>';
+            trackHtml += '</div>';
             $('#results').html(trackHtml);
         },
         error: function(xhr, status, error) {
@@ -339,11 +279,11 @@ function displayPlaylist() {
             var playlists = response.items;
             var playlistHtml = '<h2>Your Playlists:</h2>';
             playlists.forEach(function(playlist) {
-                playlistHtml += '<h3>' + playlist.name + '</h3><ul>';
+                playlistHtml += '<h3>' + playlist.name + '</h3><div class="tracks">';
                 playlist.tracks.items.forEach(function(item) {
-                    playlistHtml += '<li><button onclick="playTrack(\'' + item.track.uri + '\')">' + item.track.name + ' - ' + item.track.artists[0].name + '</button></li>';
+                    playlistHtml += '<div class="track"><p>' + item.track.name + '</p><p>' + item.track.artists.map(artist => artist.name).join(', ') + '</p><a href="#" onclick="playTrack(\'' + item.track.uri + '\')">Play</a></div>';
                 });
-                playlistHtml += '</ul>';
+                playlistHtml += '</div>';
             });
             $('#results').append(playlistHtml);
         },
