--- a/second_page.html
+++ b/second_page.html
@@ -28,7 +28,7 @@ h1 {
 
 /* Search container */
 .search-container {
-  display: flex;
+  dis: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
@@ -135,6 +135,7 @@ button:hover {
 <button id="logout-button">Logout</button>
 
 <script>
+  
 $(document).ready(function() {
     var player;
 
